--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ From the moment I made that promise I was filled with a profound sense of peace 
 While fixing monitors I didn't have any free time on my hands, not free time for my hands. My hands were always busy. There were things to take apart, to put back together, to solder, and to un-solder. 
 
 <p>
-But my mind had free time. The challenge was how to take advantage of that opportunity. I wanted to learn Java (the programming language). I figured that I needed to read the language specification. There were other things I also needed to read, such as the scriptures and teachings of the presidents of the church.
+But my mind had free time. The challenge was how to take advantage of that opportunity. I wanted to learn Java. I figured that I needed to read the language specification. There were other things I also needed to read, such as the scriptures and teachings of the presidents of the church.
 
 <p>
 So I wrote a program to read these things to me aloud, while I worked.
