Reading by listening

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ So I wrote a program to read these things to me aloud, while I worked.
 My mind had free time, but that time was frequently interrupted. The phone would ring. A customer would come in. I would finish what I was doing. Another challenge was understanding the output of text-to-speech software. Some words were pronounced incorrectly. The output was unnatural, lacking the natural flow of speech which helps the listener understand. 
 
 <p>
-So I wrote the program to only read aloud one line of text at a time, then wait for input from me. That way, I could take a phone call, help a customer, or think about what needed to be done without having to pause the computer. Also, if I had trouble understanding what was said, I could easily have the computer say it again. 
+So I wrote the program to read aloud only one line of text at a time, then wait for input from me. That way, I could take a phone call, help a customer, or think about what needed to be done without having to pause the computer. Also, if I had trouble understanding what was said, I could easily have the computer say it again. 
 
 <p>
 I came to really like the fact that the computer waited for input before continuing. Perhaps what I liked most was that I could easily think about what I had just heard. My pondering was not interrupted by the computer. Reading continued only when I was ready. Reading by listening in this way was more like regular reading, which only continued when I took initiative by moving my eyes to the next line of text.
