--- a/index.html
+++ b/index.html
@@ -247,15 +247,18 @@ So I wrote the program to read aloud only one line of text at a time, then wait 
 <p>
 I came to really like the fact that the computer waited for input before continuing. Perhaps what I liked most was that I could easily think about what I had just heard. My pondering was not interrupted by the computer. Reading continued only when I was ready. Reading by listening in this way was more like regular reading, which only continued when I took initiative by moving my eyes to the next line of text.
 
+<p>
+I had the idea that the program I had written for reading could be modified to act as an audio computer interface, enabling a person to use a computer without a visual interface. I thought an audio interface might be useful to people who were driving or otherwise unable to look at a visual interface. I loved to hike and think. Perhaps I would enjoy having computer access without the necessity of stopping to look at a screen, or trying to view a screen while walking. 
 
-
+<p>
+I realized that a simple touch-tone telephone had the necessary electronics to implement a basic audio interface: a network connection, a speaker, and some buttons. And it had a microphone.  
 
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 28 November 2015</small>
+<small>Last revised 30 November 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
