--- a/index.html
+++ b/index.html
@@ -253,12 +253,18 @@ I had the idea that the program I had written for reading could be modified to a
 <p>
 I realized that a simple touch-tone telephone had the necessary electronics to implement a basic audio interface: a network connection, a speaker, and some buttons. And it had a microphone.  
 
+<p>
+I decided to pursue my audio interface idea by building a prototype. I figured that writing the necessary software would either help me start a new business or help me start a new career.  
+
+<p>
+So I built a prototype using a Dialogic telephone interface computer expansion board. The basic functionality was that a user could peruse a set of choices by going forward and backward through a list of audio messages, and then initiate an action by selecting the desired choice. The telephone keypad acted essentially as a computer mouse, and the telephone speaker acted as the display. 
+
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 30 November 2015</small>
+<small>Last revised 2 December 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
