--- a/index.html
+++ b/index.html
@@ -259,12 +259,20 @@ I decided to pursue my audio interface idea by building a prototype. I figured t
 <p>
 So I built a prototype using a Dialogic telephone interface computer expansion board. The basic functionality was that a user could peruse a set of choices by going forward and backward through a list of audio messages, and then initiate an action by selecting the desired choice. The telephone keypad acted essentially as a computer mouse, and the telephone speaker acted as the display. 
 
+<p>
+A friend helped me find a market for the invention, which I pursued. A local movie theater decided to use the system, dubbed Keypad Browser, to announce movie showtimes over the phone. The system allowed users to quickly find showtimes they wanted to hear rather than having to wade through one long message. My dad and brother-in-law encouraged me to file a patent. I wrote it, and my dad paid the filing fee. 
+
+<p>
+At this point my monitor repair business had dried up. I took some odd jobs, including delivering newspapers with the help of my oldest children. My brother offered me a job at a computer hardware startup which was being acquired by Avocent, and I took it gratefully. Cinemark, a movie theater chain expressed interest in my product and asked me to send them one for a new theater opening in American Fork.
+
+
+
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 2 December 2015</small>
+<small>Last revised 3 December 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
