--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ So I built a prototype using a Dialogic telephone interface computer expansion b
 A friend helped me find a market for the invention, which I pursued. A local movie theater decided to use the system, dubbed Keypad Browser, to announce movie showtimes over the phone. The system allowed users to quickly find showtimes they wanted to hear rather than having to wade through one long message. My dad and brother-in-law encouraged me to file a patent. I wrote it, and my dad paid the filing fee. 
 
 <p>
-At this point my monitor repair business had dried up. I took some odd jobs, including delivering newspapers with the help of my oldest children. My brother offered me a job at a computer hardware startup which was being acquired by Avocent, and I took it gratefully. Cinemark, a movie theater chain expressed interest in my product and asked me to send them one for a new theater opening in American Fork.
+At this point my monitor repair business had dried up. I took some odd jobs, including delivering newspapers with the help of my oldest children. My brother offered me a job at a computer hardware startup which was being acquired by Avocent, and I took it gratefully. Cinemark, a movie theater chain, expressed interest in my product and asked me to send them one for a new theater opening in American Fork.
 
 
 
