--- a/index.html
+++ b/index.html
@@ -265,6 +265,14 @@ A friend helped me find a market for the invention, which I pursued. A local mov
 <p>
 At this point my monitor repair business had dried up. I took some odd jobs, including delivering newspapers with the help of my oldest children. My brother offered me a job at a computer hardware startup which was being acquired by Avocent, and I took it gratefully. Cinemark, a movie theater chain, expressed interest in my product and asked me to send them one for a new theater opening in American Fork.
 
+<p>
+During the next two years I got a taste of working for a large business, which I thoroughly enjoyed after being on my own for so many years. It was great to work together as a team to try to bring a product to market. My ability to diagnose difficult problems came in handy several times. 
+
+<p>
+During that same period, Cinemark bought many of my movie showtime announcement systems, and I successfully defended my patent claims with the help of a law firm.
+
+<p>
+Suzanne and I focused on paying off debts. We felt extremely blessed. We had just finished paying off everything except the mortgage when news came that my employer was shutting down their branch in Utah. 
 
 
 
@@ -272,7 +280,7 @@ At this point my monitor repair business had dried up. I took some odd jobs, inc
 (writing in progress ...)
 
 <p>
-<small>Last revised 3 December 2015</small>
+<small>Last revised 4 December 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
