--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ Mom instilled a love for reading and music in each child. She regularly took the
 Mom cut everyone's hair, except her own. 
 
 <p>
-After a long day of hard work, Mom would settle down and enjoy reading for herself. We loved her, and she loved us. We tried to be good and helpful so she wouldn't follow through on her repeated threat to run away to Mexico.
+After a long day of hard work, Mom would settle down and enjoy reading for herself. We loved her, and she loved us. We tried to be good and helpful so she would not follow through on her repeated threat to run away to Mexico.
 
 
 
