--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ During the next two years I got a taste of working for a large business, which I
 During that same period, Cinemark bought many of my movie showtime announcement systems, and I successfully defended my patent claims with the help of a law firm.
 
 <p>
-Suzanne and I focused on paying off debts. We felt extremely blessed. We had just finished paying off everything except the mortgage when news came that my employer was shutting down their branch in Utah. 
+Suzanne and I focused on paying off debts. We felt extremely blessed. We had just finished paying off everything except the mortgage when news came that my employer was shutting down its branch in Utah. 
 
 <p>
 Our house was small and brimming with children. We had a large back yard for kids to play and Mom to garden. We grew tomatoes, peppers, green beans, corn, onions, raspberries, apples, peaches, and a few potatoes. We tried to grow apricots and pears, but without much success. Each fall we canned enough salsa to last a year, around 60 quarts. We also made our own bread, as much as 16 loaves every two weeks from freshly ground whole wheat.
@@ -281,7 +281,7 @@ Our house was small and brimming with children. We had a large back yard for kid
 There were plenty of opportunities to develop Christ-like attributes, such as patience and brotherly kindness, especially with seven brothers in the house! We shared one bathroom.
 
 <p>
-In the winter I cut and chopped wood for the wood stove. It was big and put out a lot of heat. The house was poorly insulated, so the wood stove helped keep down the heating bill and made at least one room very warm. The light from the fire cheered Mom's spirits when winter gloom blocked out the sun for extended periods.
+In the winter I split logs for the wood stove. It was big and put out a lot of heat. The house was poorly insulated. The wood stove helped keep down the heating bill and made at least one room very warm. The light from the fire cheered Mom's spirits when winter gloom blocked out the sun for extended periods.
 
 <p>
 Mom instilled a love for reading and music in each child. She regularly took them to the library and read to them. She kept an eye open for a good used book at the local thrift store. We limited time for media in our home so that there would be plenty of time for homework, reading, singing, and visiting together. She taught each of our children to play the piano. The sound of music filled our home. 
@@ -292,13 +292,16 @@ Mom cut everyone's hair, except her own.
 <p>
 After a long day of hard work, Mom would settle down and enjoy reading for herself. We loved her, and she loved us. We tried to be good and helpful so she would not follow through on her repeated threat to run away to Mexico.
 
+<p>
+My wife helped me to see that I needed to change the way I treated my oldest son. The Spirit of the Lord softened my heart and helped me humble myself sufficient to listen and understand the truth of what she said. 
+
 
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 7 December 2015</small>
+<small>Last revised 9 December 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
