--- a/index.html
+++ b/index.html
@@ -295,13 +295,16 @@ After a long day of hard work, Mom would settle down and enjoy reading for herse
 <p>
 My wife helped me to see that I needed to change the way I treated my oldest son. The Spirit of the Lord softened my heart and helped me humble myself sufficient to listen and understand the truth of what she said. 
 
+<p>
+With the completion of my work at Avocent came a career decision. I enjoyed my work there, but I was not excited about pursuing a similar type of work with some other company. I felt I needed to pay attention to my career, not just to getting another job.
+
 
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 9 December 2015</small>
+<small>Last revised 10 December 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
