--- a/index.html
+++ b/index.html
@@ -298,13 +298,15 @@ My wife helped me to see that I needed to change the way I treated my oldest son
 <p>
 With the completion of my work at Avocent came a career decision. I enjoyed my work there, but I was not excited about pursuing a similar type of work with some other company. I felt I needed to pay attention to my career, not just to getting another job.
 
+<p>
+I was inspired by the thought of people benefiting from the system for reading by listening which I had discovered. My Keypad Browser audio computer interface technology could help provide such a benefit. Up to this point in time, that technology was merely being used to provide efficient telephone access to movie showtimes. The potential of the technology for doing good had not yet been realized. 
 
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 10 December 2015</small>
+<small>Last revised 11 December 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
