--- a/index.html
+++ b/index.html
@@ -301,12 +301,22 @@ With the completion of my work at Avocent came a career decision. I enjoyed my w
 <p>
 I was inspired by the thought of people benefiting from the system for reading by listening which I had discovered. My Keypad Browser audio computer interface technology could help provide such a benefit. Up to this point in time, the technology was merely being used to provide efficient telephone access to movie showtimes. Its full potential had not yet been realized. 
 
+<p>
+I thought perhaps it was possible to build a business on Keypad Browser technology. I attempted to put together a team and a business plan, but nothing felt right. I learned that it was not practical for me to build a career by building a business. I needed a different career plan. 
+
+<p>
+I attempted to sell my patent to the company which had won what used to be my Cinemark business, but they were unconvinced.
+
+<p>
+One morning during my prayer to begin the day I received the clear instruction: Go to BYU. 
+
+
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 11 December 2015</small>
+<small>Last revised 14 December 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
