Set sights on PhD

--- a/index.html
+++ b/index.html
@@ -308,15 +308,14 @@ I thought perhaps it was possible to build a business on Keypad Browser technolo
 I attempted to sell my patent to the company which had won what used to be my Cinemark business, but they were unconvinced.
 
 <p>
-One morning during my prayer to begin the day I received the clear instruction: Go to BYU. 
-
+One morning during my prayer to begin the day I received the clear instruction: Go to BYU. I acted in faith and came to understand that the Lord wanted me to set my sights on a PhD, and consider the possibility of being a university professor. 
 
 
 <p>
 (writing in progress ...)
 
 <p>
-<small>Last revised 14 December 2015</small>
+<small>Last revised 15 December 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
