--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ One important task at hand is to get a job. I would like to teach and supervise 
 <p>Intelligent cooperative control for urban tracking, <a href="http://link.springer.com/article/10.1007/s10846-013-9896-5">JINT 2014</a>
 <p>Elicited imitation for prediction of OPI test scores, <a href="http://dl.acm.org/citation.cfm?id=2043136">ACL 2011</a> 
 
+<h3>Software</h3>
+(coming soon ...)
+
 <h3>Personal</h3>
 <p>The adventures of Kevin Cook [<a href="adventure.html">html</a>]
 
