--- a/0.9-repeating.html
+++ b/0.9-repeating.html
@@ -15,9 +15,11 @@ Likewise, the question "Does 0.9 repeating equal one?" is confusing since the te
 <p>
 In order to make sense of the question, it is necessary to define the term "0.9 repeating". If we define the term to be equivalent to one, then yes it equals one. If we define the term as a variable which approaches one as nines are added, then no it does not equal one since it does not refer to a number.
 
+<p>
+One might attempt to define the term as a zero followed by a decimal point followed by an infinite sequence of nines, not a sequence which is continually growing, but a static sequence which has no end. Such an attempt to define sets forth contradictory conditions which cannot be satisfied, and therefore fails to define because it fails to clarify the meaning of the term. Rather than clarify, the attempt to define confuses. 
 
 <p>
-<small>Last revised 28 December 2015</small>
+<small>Last revised 29 December 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
