--- a/0.9-repeating.html
+++ b/0.9-repeating.html
@@ -19,7 +19,15 @@ In order to make sense of the question, it is necessary to define the term "0.9 
 One might attempt to define the term as a zero followed by a decimal point followed by an infinite sequence of nines, not a sequence which is continually growing, but a static sequence which has no end. Such an attempt to define sets forth contradictory conditions which cannot be satisfied, and therefore fails to define because it fails to clarify the meaning of the term. Rather than clarify, the attempt to define confuses. 
 
 <p>
-<small>Last revised 29 December 2015</small>
+A sequence which is continually growing is a variable which refers to different sequences at different times. We refer to the variable as a sequence, even though it is not a sequence. Rather it is a sequence variable, a variable which refers to one sequence at one time and possibly another sequence at another time.
+
+<p>
+In order to define a sequence it is necessary to define both the beginning and the end of the sequence. For example, suppose that the first element of a sequence is nine, the second element is nine, and likewise the third element is nine. Has the sequence been defined? Not yet. What has been defined is a class of sequences, the class of sequences which begin with three nines. If we additionally specify that the third element is the last element, then the sequence is defined. Once the sequence is defined we can interpret the sequence as a number, 999.
+
+ 
+
+<p>
+<small>Last revised 30 December 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
