--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@
   <h2>Kevin M. B. Cook</h2>
    <img src="img/kevin.jpg">
 <p>
-Hi and welcome to the home page of a BYU cougar. The end is near! (The end of a long and <a href="adventure.html">adventurous</a> process completing my PhD degree.) I anticipate defending my dissertation in April. 
+Hi and welcome to the home page of a BYU cougar. The end is near! (The end of a long and <a href="adventure.html">adventurous</a> process completing my PhD degree.) I anticipate defending my dissertation in April. Afterwards, I look forward to teaching. 
 
 <p>
-One important task at hand is to get a job. I would like to teach and supervise student research. I am passionate about learning and look forward to contributing to university education. Particularly, I would like to teach a course in mathematics based on my ZFC paper (listed below). Please contact me at my gmail address: kevincook13. 
+What should be taught? Should we teach what is good, or evil, or perhaps both? Should we teach what is popular, or what is right? Should we teach what will bring us approval and job security? As teachers let us be united in a determination to teach what is good, what benefits those we teach and the world as a whole. Below is a collection of my teaching, my effort to influence the world for good. 
 
-<h3>Selected papers</h3>
-<p>A proof of the inconsistency of ZFC [<a href="doc/not-zfc.pdf">pdf</a>] (working paper)
+<p>
+<h3>Mathematics and meaning of the term infinity</h3>
+<p>A proof of the inconsistency of ZFC [<a href="doc/not-zfc.pdf">pdf</a>]
+<p><a href="0.9-repeating.html">Does 0.9 repeating equal one?</a>
+
+<p>
+<h3>Computer Science</h3>
 <p>Probability of belonging to a language, <a href="http://scholarsarchive.byu.edu/etd/4023/">BYU 2013</a>
 <p>Intelligent cooperative control for urban tracking, <a href="http://link.springer.com/article/10.1007/s10846-013-9896-5">JINT 2014</a>
 <p>Elicited imitation for prediction of OPI test scores, <a href="http://dl.acm.org/citation.cfm?id=2043136">ACL 2011</a> 
 
-<h3>Course Material</h3>
-<a href="0.9-repeating.html">Does 0.9 repeating equal one?</a>
-
-<h3>Software</h3>
-(coming soon ...)
-
+<p>
 <h3>Personal</h3>
 <a href="adventure.html"><p>The adventures of Kevin Cook</a>
 
+<p>
+<h3>Contact information</h3>
+My gmail address is kevincook13.
 
 <p>
-<small>Last revised 30 December 2015</small>
+<small>Last revised 31 December 2015</small>
 <p>
 <small>Copyright &copy; 2015 Kevin Cook</small>
 </body>
