--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 Hi and welcome to the home page of a BYU cougar. The end is near! (The end of a long and <a href="adventure.html">adventurous</a> process completing my PhD degree.) I anticipate defending my dissertation in April. Afterwards, I look forward to teaching. 
 
 <p>
-What should be taught? Should we teach what is good, or evil, or perhaps both? Should we teach what is popular, or what is right? Should we teach what will bring us approval and job security? As teachers let us be united in a determination to teach what is good, what benefits those we teach and the world as a whole. Below is a collection of my teaching, my effort to influence the world for good. 
+What should be taught? Should we teach that which is good, or evil, or perhaps both? Should we teach what is popular, or what is right? Should we teach what will bring approval and job security to us? As teachers let us be united in a determination to teach that which is good, that which benefits those we teach and the world as a whole. Below is a collection of my teaching, my effort to influence the world for good. 
 
 <p>
 <h3>Mathematics and meaning of the term infinity</h3>
