--- a/0.9-repeating.html
+++ b/0.9-repeating.html
@@ -24,11 +24,29 @@ A sequence which is continually growing is a variable which refers to different 
 <p>
 In order to define a sequence it is necessary to define both the beginning and the end of the sequence. For example, suppose that the first element of a sequence is nine, the second element is nine, and likewise the third element is nine. Has the sequence been defined? Not yet. What has been defined is a class of sequences, the class of sequences which begin with three nines. If we additionally specify that the third element is the last element, then the sequence is defined. Once the sequence is defined we can interpret the sequence as a number, 999.
 
+<p>
+A sequence has an end. If a sequence does not have an end then it is not defined. If a sequence is not defined then it is not a sequence, even though we refer to it as a sequence. As mentioned earlier, we may refer to a sequence variable as a sequence. Likewise, we may refer to a class as a sequence. The sequence class is the class of things which are sequences. A class is not a sequence. A sequence that does not have an end is not a sequence. 
  
+<p>
+A sequence that does not grow or change is a static sequence. A static sequence is simply a sequence, and has an end.
 
 <p>
-<small>Last revised 30 December 2015</small>
+The conditions of a sequence being static and not having an end are contradictory because a static sequence has an end.
+
 <p>
-<small>Copyright &copy; 2015 Kevin Cook</small>
+A finite sequence is simply a sequence.
+
+<p>
+An infinite sequence does not have an end and is therefore not a sequence. An infinite sequence is not static, because it does not have an end. An infinite sequence is a sequence variable.
+
+<p>
+A zero followed by a decimal point followed by an infinite sequence of nines is a sequence variable which can be interpreted as a number approaching one as nines are added.
+
+
+
+<p>
+<small>Last revised 1 January 2016</small>
+<p>
+<small>Copyright &copy; 2016 Kevin Cook</small>
 </body>
 </html> 
