--- a/0.9-repeating.html
+++ b/0.9-repeating.html
@@ -37,7 +37,7 @@ The conditions of a sequence being static and not having an end are contradictor
 A finite sequence is simply a sequence.
 
 <p>
-An infinite sequence does not have an end and is therefore not a sequence. An infinite sequence is not static, because it does not have an end. An infinite sequence is a sequence variable.
+An infinite sequence does not have an end and is therefore not a sequence. An infinite sequence is a sequence variable.
 
 <p>
 A zero followed by a decimal point followed by an infinite sequence of nines is a sequence variable which can be interpreted as a number approaching one as nines are added.
