--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ What should be taught? Should we teach that which is good, or evil, or perhaps b
 <p>
 <h3>Mathematics and meaning of the term infinity</h3>
 <p>A proof of the inconsistency of ZFC [<a href="doc/not-zfc.pdf">pdf</a>]
-<p><a href="0.9-repeating.html">Does 0.9 repeating equal one?</a>
+<p><a href="point-nine-repeating.html">Does 0.999... equal one?</a>
 
 <p>
 <h3>Computer Science</h3>
@@ -29,7 +29,7 @@ What should be taught? Should we teach that which is good, or evil, or perhaps b
 My gmail address is kevincook13.
 
 <p>
-<small>Last revised 1 January 2016</small>
+<small>Last revised 4 January 2016</small>
 <p>
 <small>Copyright &copy; 2016 Kevin Cook</small>
 </body>
