--- a/point-nine-repeating.html
+++ b/point-nine-repeating.html
@@ -10,8 +10,17 @@ The number 0.9 does not equal one. And the number 0.99 does not equal one. No ma
 The question "Does 0.999... equal one?" is confusing since the term "0.999..." implies that the nines repeat without end, making it impossible to get to the word "equal" when trying to make sense of the question.
 
 <p>
-In order to make sense of the question, it is necessary to define the term "0.999...". If we define the term to be equivalent to one, then yes it equals one. If we define the term as a variable which approaches one as nines are added, then no it does not equal one since it does not refer to a number.
+In order to make sense of the question, it is necessary to define the term "0.999...". 
 
+<h3>Limit</h3>
+<p>
+If we define the term to be equivalent to one, then yes it equals one. Such is the case when we define the term to be equal to the limit of a variable which approaches one as nines are added. Defining the term to be equal to the limit of this variable is confusing. If the term refers to the limit of the variable, then what notation is used to refer to the variable itself? The limit equals one. When referring to the limit, why not just use the term "one"?
+
+<h3>Variable</h3>
+<p>
+If we define the term as a variable which approaches one as nines are added, then no it does not equal one since it does not refer to the same number at any time. Rather, it refers to a different number each time a nine is added.
+
+<h3>Contradiction</h3>
 <p>
 One might attempt to define the term as a zero followed by a decimal point followed by an infinite sequence of nines, not a sequence which is continually growing, but a static sequence which has no end. Such an attempt to define specifies contradictory conditions which cannot be satisfied, and therefore fails to define because it fails to clarify the meaning of the term. Rather than clarify, the attempt to define confuses. 
 
@@ -39,10 +48,13 @@ An infinite sequence does not have an end and is therefore not a sequence. An in
 <p>
 A zero followed by a decimal point followed by an infinite sequence of nines is a sequence variable which can be interpreted as a variable approaching one as nines are added, a variable which refers to different numbers at different times. 
 
+<h3>Proposal</h3>
+<p>
+I propose that we define the term "0.999..." to refer to a variable approaching one as nines are added.
 
 
 <p>
-<small>Last revised 4 January 2016</small>
+<small>Last revised 5 January 2016</small>
 <p>
 <small>Copyright &copy; 2016 Kevin Cook</small>
 </body>
