Mathematics and meaning of the term infinite

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Hi and welcome to the home page of a BYU cougar. The end is near! (The end of a 
 What should be taught? Should we teach that which is good, or evil, or perhaps both? Should we teach what is popular, or what is right? Should we teach what will bring approval and job security to us? As teachers let us be united in a determination to teach that which is good, that which benefits those we teach and the world as a whole. Below is a collection of my teaching, my effort to influence the world for good. 
 
 <p>
-<h3>Mathematics and meaning of the term infinity</h3>
+<h3>Mathematics and meaning of the term infinite</h3>
 <p>A proof of the inconsistency of ZFC [<a href="doc/not-zfc.pdf">pdf</a>]
 <p><a href="point-nine-repeating.html">Does 0.999... equal one?</a>
 
@@ -29,7 +29,7 @@ What should be taught? Should we teach that which is good, or evil, or perhaps b
 My gmail address is kevincook13.
 
 <p>
-<small>Last revised 5 January 2016</small>
+<small>Last revised 6 January 2016</small>
 <p>
 <small>Copyright &copy; 2016 Kevin Cook</small>
 </body>
