--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <h2>Kevin M. B. Cook</h2>
    <img src="img/kevin.jpg">
 <p>
-Hi and welcome to the home page of a BYU cougar. The end is near! (The end of a long and <a href="adventure.html">adventurous</a> process completing my PhD degree.) I anticipate defending my dissertation in April. Afterwards, I look forward to teaching. 
-
+Hi and welcome to my home page, which shares my view on teaching. 
 <p>
-What should be taught? Should we teach that which is good, or evil, or perhaps both? Should we teach what is popular, or what is right? Should we teach what will bring approval and job security to us? As teachers let us be united in a determination to teach that which is good, that which benefits those we teach and the world as a whole. Below is a collection of my teaching, my effort to influence the world for good. 
+What should be taught? Should we teach that which is good, or evil, or perhaps both? Should we teach what is popular, or what is right? Should we teach what will bring approval and job security to us?
+<p>
+As teachers let us be united in a determination to teach that which is good, that which benefits those we teach and the world as a whole. Below is a collection of my teaching, my effort to influence the world for good. 
 
 <p>
 <h3>Mathematics and meaning of the term infinite</h3>
@@ -29,8 +30,8 @@ What should be taught? Should we teach that which is good, or evil, or perhaps b
 My gmail address is kevincook13.
 
 <p>
-<small>Last revised 6 January 2016</small>
+<small>Last revised 4 January 2018</small>
 <p>
-<small>Copyright &copy; 2016 Kevin Cook</small>
+<small>Copyright &copy; 2018 Kevin Cook</small>
 </body>
 </html> 
