--- a/adventure.html
+++ b/adventure.html
@@ -4,7 +4,7 @@
   <h2>The Adventures of Kevin Cook</h2>
    <img src="img/kevin.jpg">
 <p>
-Welcome to the story of my adventures in graduate school. I was a PhD candidate in the computer science department at Brigham Young University in Provo Utah.
+Welcome to the story of my adventures in graduate school. I was a doctoral student in computer science at Brigham Young University in Provo Utah.
 
 <p>
 On Thursday June 4th 2015 at about 11am while running multiple experiments simulating a team of UAVs tracking a ground target, my experiments all crashed together, and I soon realized that I could no longer log in to my computer. 
