Update point nine repeating article.

--- a/point-nine-repeating.html
+++ b/point-nine-repeating.html
@@ -22,31 +22,10 @@ If we define the term as a variable which approaches one as nines are added, the
 
 <h3>Contradiction</h3>
 <p>
-One might attempt to define the term as a zero followed by a decimal point followed by an infinite sequence of nines, not a sequence which is continually growing, but a static sequence which has no end. Such an attempt to define specifies contradictory conditions which cannot be satisfied, and therefore fails to define because it fails to clarify the meaning of the term. Rather than clarify, the attempt to define confuses. 
+One might attempt to define the term as a zero followed by a decimal point followed by an infinite sequence of nines, not a sequence which is continually growing, but a static sequence which has no end. Such an attempt to define would be contradictory since specifying the end of a static sequence is necessary in order to define the sequence. 
 
 <p>
-A sequence which is continually growing is a variable which refers to different sequences at different times. We refer to the variable as a sequence, even though it is not a sequence. Rather it is a sequence variable, a variable which refers to one sequence at one time and possibly another sequence at another time.
-
-<p>
-In order to define a sequence it is necessary to define both the beginning and the end of the sequence. For example, suppose that the first element of a sequence is nine, the second element is nine, and likewise the third element is nine. Has the sequence been defined? Not yet. What has been defined is a class of sequences, the class of sequences which begin with three nines. If we additionally specify that the third element is the last element, then the sequence is defined. Once the sequence is defined we can interpret the sequence as a number, 999.
-
-<p>
-A sequence has an end. If a sequence does not have an end then it is not defined. If a sequence is not defined then it is not a sequence, even though we refer to it as a sequence. As mentioned earlier, we may refer to a sequence variable as a sequence. Likewise, we may refer to a class as a sequence. The sequence class is the class of things which are sequences. A class is not a sequence. A sequence that does not have an end is not a sequence. 
- 
-<p>
-A sequence that does not grow or change is a static sequence. A static sequence is simply a sequence, and has an end.
-
-<p>
-The conditions of a sequence being static and not having an end are contradictory because a static sequence has an end.
-
-<p>
-A finite sequence is simply a sequence.
-
-<p>
-An infinite sequence does not have an end and is therefore not a sequence. An infinite sequence is a sequence variable.
-
-<p>
-A zero followed by a decimal point followed by an infinite sequence of nines is a sequence variable which can be interpreted as a variable approaching one as nines are added, a variable which refers to different numbers at different times. 
+In order to define a static sequence it is necessary to define both the beginning and the end of the sequence. For example, suppose that the first element of a sequence is nine, the second element is nine, and likewise the third element is nine. Has the sequence been defined? Not yet. If we additionally specify that the third element is the last element, then the sequence is defined. Once the sequence is defined we can interpret the sequence as a number, 999.
 
 <h3>Proposal</h3>
 <p>
@@ -54,8 +33,8 @@ I propose that we define the term "0.999..." to refer to a variable approaching 
 
 
 <p>
-<small>Last revised 5 January 2016</small>
+<small>Last revised 27 January 2018</small>
 <p>
-<small>Copyright &copy; 2016 Kevin Cook</small>
+<small>Copyright &copy; 2018 Kevin Cook</small>
 </body>
 </html> 
