--- a/point-nine-repeating.html
+++ b/point-nine-repeating.html
@@ -27,13 +27,19 @@ One might attempt to define the term as a zero followed by a decimal point follo
 <p>
 In order to define a static sequence it is necessary to define both the beginning and the end of the sequence. For example, suppose that the first element of a sequence is nine, the second element is nine, and likewise the third element is nine. Has the sequence been defined? Not yet. If we additionally specify that the third element is the last element, then the sequence is defined. Once the sequence is defined we can interpret the sequence as a number, 999.
 
+<h3>Class</h3>
+<p>
+A zero followed by a decimal point followed by an unlimited (in a sense infinite) number of nines may define a class, rather than refer to the contradiction above. The sequences 0.9, 0.99, and 0.999 are all members of this class, meaning that each of these sequences satisfy the constraints of the class. The class itself is a description, not a sequence or a group of sequences.  
+
+<h3>Convention</h3>
+The academic convention today is to consider 0.999... an infinite sequence, not the variable or class described above, rather the contradiction described above without acknowledging that the choice is contradictory. Such a choice is confusing and harmful.
+
 <h3>Proposal</h3>
-<p>
-I propose that we define the term "0.999..." to refer to a variable approaching one as nines are added.
+I propose changing convention in favor of terminology which clarifies meaning.
 
 
 <p>
-<small>Last revised 27 January 2018</small>
+<small>Last revised 7 April 2018</small>
 <p>
 <small>Copyright &copy; 2018 Kevin Cook</small>
 </body>
