Update point nine repeating.

--- a/point-nine-repeating.html
+++ b/point-nine-repeating.html
@@ -32,7 +32,7 @@ In order to define a static sequence it is necessary to define both the beginnin
 A zero followed by a decimal point followed by an unlimited (in a sense infinite) number of nines may define a class, rather than refer to the contradiction above. The sequences 0.9, 0.99, and 0.999 are all members of this class, meaning that each of these sequences satisfy the constraints of the class. The class itself is a description, not a sequence or a group of sequences.  
 
 <h3>Convention</h3>
-The academic convention today is to consider 0.999... an infinite sequence, not the variable or class described above, rather the contradiction described above without acknowledging that the choice is contradictory. Such a choice is confusing and harmful.
+The academic convention today is to consider 0.999... an infinite sequence, not the variable or class described above, rather the contradiction described above without acknowledging that doing so is contradictory. Such a choice is confusing and harmful.
 
 <h3>Proposal</h3>
 I propose changing convention in favor of terminology which clarifies meaning.
