Update point nine repeating.

--- a/point-nine-repeating.html
+++ b/point-nine-repeating.html
@@ -12,10 +12,6 @@ The question "Does 0.999... equal one?" is confusing since the term "0.999..." i
 <p>
 In order to make sense of the question, it is necessary to define the term "0.999...". 
 
-<h3>Limit</h3>
-<p>
-If we define the term to be equivalent to one, then yes it equals one. Such is the case when we define the term to be equal to the limit of a variable which approaches one as nines are added. Defining the term to be equal to the limit of this variable is confusing. If the term refers to the limit of the variable, then what notation is used to refer to the variable itself? The limit equals one. When referring to the limit, why not just use the term "one"?
-
 <h3>Variable</h3>
 <p>
 If we define the term as a variable which approaches one as nines are added, then no it does not equal one since it does not refer to the same number at any time. Rather, it refers to a different number each time a nine is added.
@@ -31,15 +27,16 @@ In order to define a static sequence it is necessary to define both the beginnin
 <p>
 A zero followed by a decimal point followed by an unlimited (in a sense infinite) number of nines may define a class, rather than refer to the contradiction above. The sequences 0.9, 0.99, and 0.999 are all members of this class, meaning that each of these sequences satisfy the constraints of the class. The class itself is a description, not a sequence or a group of sequences.  
 
-<h3>Convention</h3>
-The academic convention today is to consider 0.999... an infinite sequence, not the variable or class described above, rather the contradiction described above without acknowledging that doing so is contradictory. Such a choice is confusing and harmful.
+<h3>Limit</h3>
+<p>
+One might define the term to refer to the limit of the variable described above. Since the limit is one the term would refer to one. To avoid confusion it would be necessary to define a term referring to the variable.
 
-<h3>Proposal</h3>
-I propose changing convention in favor of terminology which clarifies meaning.
+<p>
+Rather than define the term to refer directly to the limit, one might consider defining the term to evaluate to the limit. If the term refers to the variable described above then the term does not evaluate to the limit, because the variable refers to a different number each time a nine is added. If the term refers to the contradiction described above then the term does not evaluate to anything. If the term refers to the class described above then again the term does not evaluate since it is a description not a sequence. In order to pursue this course it would be necessary to specify what the term refers to while ensuring that what the term refers to can evaluate to one. 
 
 
 <p>
-<small>Last revised 7 April 2018</small>
+<small>Last revised 25 September 2018</small>
 <p>
 <small>Copyright &copy; 2018 Kevin Cook</small>
 </body>
