--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 <p>
 Hi and welcome to my home page, which shares my view on teaching. 
 <p>
-What should be taught? Should we teach that which is good, or evil, or perhaps both? Should we teach what is popular, or what is right? Should we teach what will bring approval and job security to us?
+What should be taught? Should we teach that which is good, or evil, or perhaps both? Should we teach what is popular, or what is right? Should we teach what will bring approval and job security to us? As teachers let us be united in a determination to teach that which is good, that which benefits those we teach and the world as a whole. 
 <p>
-As teachers let us be united in a determination to teach that which is good, that which benefits those we teach and the world as a whole. Below is a collection of my teaching, my effort to influence the world for good. 
-
+Below is a collection of my teaching, my effort to influence the world for good. 
 <p>
 <p><a href="point-nine-repeating.html">Does 0.999... equal one?</a>
 <p>A proof of the inconsistency of ZFC [<a href="doc/not-zfc.pdf">pdf</a>]
