Update point nine repeating.

--- a/point-nine-repeating.html
+++ b/point-nine-repeating.html
@@ -23,6 +23,9 @@ One might attempt to define the term as a zero followed by a decimal point follo
 <p>
 In order to define a static sequence it is necessary to define both the beginning and the end of the sequence. For example, suppose that the first element of a sequence is nine, the second element is nine, and likewise the third element is nine. Has the sequence been defined? Not yet. If we additionally specify that the third element is the last element, then the sequence is defined. Once the sequence is defined we can interpret the sequence as a number, 999.
 
+<p>
+I reject the practice of defining the term sequence as referring to something which does not have an end, because the sequence of digits 999 has an end, and is a sequence.
+
 <h3>Class</h3>
 <p>
 A zero followed by a decimal point followed by an unlimited (in a sense infinite) number of nines may define a class, rather than refer to the contradiction above. The sequences 0.9, 0.99, and 0.999 are all members of this class, meaning that each of these sequences satisfy the constraints of the class. The class itself is a description, not a sequence or a group of sequences.  
@@ -36,8 +39,8 @@ Rather than define the term to refer directly to the limit, one might consider d
 
 
 <p>
-<small>Last revised 25 September 2018</small>
+<small>Last revised 3 January 2019</small>
 <p>
-<small>Copyright &copy; 2018 Kevin Cook</small>
+<small>Copyright &copy; 2019 Kevin Cook</small>
 </body>
 </html> 
